# vkthing

./: .gitignore  CMakeLists.txt  build.py  build_linux.py  build_win.py
app/sandbox/: CMakeLists.txt  main.cpp
diff_module/: diffusion_effect.cpp  diffusion_effect.h
diff_scripts/: comp.txt  lightning_depth.py  lightning_gen.py  lightning_test.py  requirements.txt  source_changes.txt  trace.py
engine/: CMakeLists.txt
engine/core/: log.h  time.h
engine/ecs/: ecs.h
engine/platform/: input.cpp  input.h  window.cpp  window.h
engine/renderer/: renderer.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/scene/: camera.h  gltf_loader.cpp  gltf_loader.h  light.h  transform.h
engine/shaders/: mesh.frag  mesh.vert  terrain_points.frag  terrain_points.vert
engine/terrain/: terrain.cpp  terrain.h
samples/vulkan_minimal/: CMakeLists.txt  main.cpp
samples/vulkan_validation/: CMakeLists.txt  main.cpp
samples/vulkan_window/: CMakeLists.txt  main.cpp
